home comment delete modal

--- a/basics/templates/basics/home.html
+++ b/basics/templates/basics/home.html
@@ -266,7 +266,7 @@
                 <div class="list-group" style="margin-bottom: 0px; margin-top: 15px;">
                     {% for elem in result_list %}
 
-                        <div class="modal fade" id="myModal" role="dialog">
+                        <div class="modal fade" id="needDelete" role="dialog">
                             <div class="modal-dialog">
 
                              <!-- Modal content-->
@@ -339,7 +339,7 @@
                                                     <span class="glyphicon glyphicon-pencil"></span> Edit
                                                 </div>
                                             </a>
-                                            <a class="list-group-footer-button" type="button" data-toggle="modal" data-target="#myModal" >
+                                            <a class="list-group-footer-button" type="button" data-toggle="modal" data-target="#needDelete" >
                                                 <div class="col-sm-6">
                                                     <span class="glyphicon glyphicon-remove"></span> Delete
                                                 </div></a>
@@ -415,6 +415,30 @@
                             </div>
 
                         {% else %}
+                            <div class="modal fade" id="commentDelete" role="dialog">
+                            <div class="modal-dialog">
+
+                             <!-- Modal content-->
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h4 class="modal-title">Delete This Comment</h4>
+                                     </div>
+                                    <div class="modal-body">
+                                        <p>If you delete This Comment, the data will be permanently lost.</p>
+                                        <p>Would you like to rethink your decision?</p>
+                                    </div>
+                                     <div class="modal-footer">
+                                        <button id="standard-grey-button-light" type="button" class="btn btn-default" data-dismiss="modal">Rethink</button>
+                                        <a id="standard-grey-button-light" type="button" class="btn btn-default" href="{% url 'basics:delete_comment_timeline' pk=elem.pk %}">
+                                            <span class="glyphicon glyphicon-remove"></span> Delete
+                                        </a>
+                                     </div>
+                                </div>
+
+                            </div>
+                        </div>
+
                             <!-- comment on information -->
                             <div class="row">
                                 <div class="timeline-badge" id="tooltip-info" data-toggle="tooltip" data-placement="bottom" title="your written comment"><i class="glyphicon glyphicon-comment"></i></div>
@@ -436,7 +460,7 @@
                                                     <span class="glyphicon glyphicon-search"></span> Details
                                                 </div>
                                             </a>
-                                            <a class="list-group-footer-button" type="button" href="{% url 'basics:delete_comment_timeline' pk=elem.pk %}">
+                                            <a class="list-group-footer-button" type="button" data-toggle="modal" data-target="#commentDelete" >
                                                 <div class="col-sm-6">
                                                     <span class="glyphicon glyphicon-remove"></span> Delete
                                                 </div>
