--- a/basics/templates/basics/chat.html
+++ b/basics/templates/basics/chat.html
@@ -17,9 +17,9 @@
 <style>
     .not-active {
         pointer-events: none;
-        cursor: default;
-
+        cursor: not-allowed;;
     }
+
     #chat-css-container {
         margin-left: 0px;
         margin-right: 0px;
@@ -89,8 +89,7 @@
     }
 
     #chat-send-number-container {
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
     }
 
     #chat-mesage-container {
@@ -338,19 +337,34 @@
                 placeholder={props.labelText}
                 required/>
             </div>
-            <div className="col-sm-4 col-sm-offset-8 {% if room.helper_out %}not-active {% endif %}" id="send-button-container">
-                <button onClick={props.handleClick}
-                className= 'btn btn-primary btn-block'
-                id="standard-grey-button-light"
-                type= 'submit' >
-                    <span className="glyphicon glyphicon-send"></span> {props.buttonText}
-                </button>
-            </div>
-            <div className="col-sm-4 {% if room.helper_out or not request.user|has_number %}not-active {% endif %}" id="chat-send-number-container" onClick={props.sendNumber.bind(null, 'number')}>
-                <a id="standard-grey-button-light" className="btn btn-primary btn-block" >
-                    <span className="glyphicon glyphicon-earphone"></span> Send Number
-                </a>
-            </div>
+            {% if request.user|has_number %}
+                <div className="col-sm-8 col-sm-offset-4">
+                    <div className="row">
+                        <div className="col-sm-6 {% if room.helper_out %}not-active {% endif %}" id="chat-send-number-container" onClick={props.sendNumber.bind(null, 'number')}>
+                            <a id="standard-grey-button-light" className="btn btn-primary btn-block">
+                                <span className="glyphicon glyphicon-earphone"></span> Send Number
+                            </a>
+                        </div>
+                        <div className="col-sm-6 {% if room.helper_out %}not-active {% endif %}" id="send-button-container">
+                            <button onClick={props.handleClick}
+                            className= 'btn btn-primary btn-block'
+                            id="standard-grey-button-light"
+                            type= 'submit' >
+                                <span className="glyphicon glyphicon-send"></span> {props.buttonText}
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            {% else %}
+                    <div className="col-sm-4 col-sm-offset-8 {% if room.helper_out %}not-active {% endif %}" id="send-button-container">
+                        <button onClick={props.handleClick}
+                        className= 'btn btn-primary btn-block'
+                        id="standard-grey-button-light"
+                        type= 'submit' >
+                            <span className="glyphicon glyphicon-send"></span> {props.buttonText}
+                        </button>
+                    </div>
+            {% endif %}
         </div>
 
     );
@@ -528,19 +542,60 @@
 
           <div className="row" id="header-css-chat">
               <div className="col-sm-7" id="header-css-description-container">
-                  <p id="header-css-chat-description">Chat: <a id="green-link" data-toggle="modal" data-target="#need-modal">{{name}}</a></p>
+                  <p id="header-css-chat-description">Chat: <a id="green-link" className="cursor-pointer" data-toggle="modal" data-target="#need-modal">{{name}}</a></p>
               </div>
 
-              <a className="list-group-footer-button cursor-pointer {% if room.helper_out %}not-active {% endif %}"  type="button" href="{% url 'basics:needs_finish' roomname=roomname %}">
-                  <div className="col-sm-2" id="header-css-middle-button-container">
-                      <span className="glyphicon glyphicon-ok"></span> Done
-                  </div>
-              </a>
-              <a className="list-group-footer-button cursor-pointer {% if room.helper_out %}not-active {% endif %}" type="button" href="{% url 'basics:kick_user' roomname=roomname %}">
-                  <div className="col-sm-3" id="header-css-button-container">
-                      <span className="glyphicon glyphicon-log-out"></span> {% if roomname|is_own:request.user %} Kick User {% else %} Leave Chat {% endif %}
-                  </div>
-              </a>
+              {% if roomname|is_own:request.user %}
+
+                    {% if not room.user_req %}
+
+                        {% if not room.helper_out %}
+
+                            {% if not room.need_user_finished %}
+
+                                <a className="list-group-footer-button cursor-pointer"  type="button" href="{% url 'basics:needs_finish' roomname=roomname %}">
+                                    <div className="col-sm-2" id="header-css-middle-button-container">
+                                        <span className="glyphicon glyphicon-ok"></span> Done
+                                    </div>
+                                </a>
+                                <a className="list-group-footer-button cursor-pointer" type="button" href="{% url 'basics:kick_user' roomname=roomname %}">
+                                    <div className="col-sm-3" id="header-css-button-container">
+                                        <span className="glyphicon glyphicon-log-out"></span> Kick User
+                                    </div>
+                                </a>
+
+                            {% endif %}
+
+                        {% endif %}
+
+                    {% endif %}
+
+              {% else %}
+
+                    {% if not room.need_user_finished %}
+
+                        <a className="list-group-footer-button cursor-pointer" type="button" href="{% url 'basics:kick_user' roomname=roomname %}">
+                            <div className="col-sm-3 col-sm-offset-2" id="header-css-button-container">
+                                <span className="glyphicon glyphicon-log-out"></span>  Leave Chat
+                            </div>
+                        </a>
+
+                    {% else %}
+
+                        {% if not room.help_user_finished %}
+
+                            <a className="list-group-footer-button cursor-pointer"  type="button" href="{% url 'basics:needs_finish' roomname=roomname %}">
+                                <div className="col-sm-2 col-sm-offset-3" id="header-css-middle-button-container">
+                                    <span className="glyphicon glyphicon-ok"></span> Done
+                                </div>
+                            </a>
+
+                        {% endif %}
+
+                    {% endif %}
+
+              {% endif %}
+
           </div>
           <div className="row">
             <div className="col-sm-8" id="chat-info-container">
