--- a/basics/templates/basics/group_detail.html
+++ b/basics/templates/basics/group_detail.html
@@ -130,8 +130,8 @@
                                 </div>
                                  <div class="modal-footer">
                                     <button id="standard-grey-button-light" type="button" class="btn btn-default"  data-dismiss="modal">Rethink</button>
-                                    <a id="standard-grey-button-light" type="button" class="btn btn-default"  href="{% url 'basics:group_leave' pk=group.pk %}">
-                                        <span class="glyphicon glyphicon-remove"></span> Delete
+                                     <a id="standard-grey-button-light" type="button" class="btn btn-default"  href="{% url 'basics:group_leave' pk=group.pk %}">
+                                        <span class="glyphicon glyphicon-log-out"></span> Leave
                                     </a>
                                  </div>
                             </div>
