--- a/basics/templates/basics/home.html
+++ b/basics/templates/basics/home.html
@@ -248,7 +248,7 @@
                             <select style="width: 100%" name="activities" id="activities">
                                 <option value="all_activities">all activities</option>
                                 <option value="posted_needs">posted needs</option>
-                                <option value="needs_help">needs where you help</option>
+                                <option value="needs_help">needs where you helped</option>
                                 <option value="posted_information">posted information</option>
                                 <option value="written_comments">written comments</option>
                             </select>
