--- a/administration/templates/administration/groups.html
+++ b/administration/templates/administration/groups.html
@@ -148,30 +148,6 @@
                 {% endif %}
                     <!-- list the searched category -->
                     {% if gro %}
-                        <div class="modal fade" id="groupDeleteSearched" role="dialog">
-                        <div class="modal-dialog">
-
-                         <!-- Modal content-->
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Delete This Group</h4>
-                                 </div>
-                                <div class="modal-body">
-                                    <p>If you delete this group, the data will be permanently lost.</p>
-                                    <p>Would you like to rethink your decision?</p>
-                                </div>
-                                 <div class="modal-footer">
-                                     <a id="standard-grey-button-light" type="button" class="btn btn-default" href="{% url 'administration:group_delete' pk=gro.pk %}">
-
-                                                    <span class="glyphicon glyphicon-remove"></span> Delete
-                                                </a>
-                                    <button id="standard-grey-button-light" type="button" class="btn btn-default"  data-dismiss="modal">Rethink</button>
-                                 </div>
-                            </div>
-
-                            </div>
-                            </div>
 
                         <div class="list-group-item" id="standard-list-group-item-div">
                             <div class="row">
@@ -182,38 +158,13 @@
                                     <h6>Number of members: {{ gro.user_set.all|length }}</h6>
                                 </div>
                                 <div class="col-sm-2">
-                                    <a id="standard-grey-button-light" class="btn btn-default btn-sml" data-toggle="modal" data-target="#groupDeleteSearched"href="{% url 'administration:group_delete' pk=gro.pk %}" title="Delete Group" style="float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
+                                    <a id="standard-grey-button-light" class="btn btn-default btn-sml" onclick="deletePrompt('{{gro.pk}}')" title="Delete Group" style="float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
                                 </div>
                             </div>
                         </div>
                     <!-- end list the searched category -->
                     {% else %}
                         {% for group in groups %}
-
-                            <div class="modal fade" id="groupDelete" role="dialog">
-                        <div class="modal-dialog">
-
-                         <!-- Modal content-->
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Delete This Group</h4>
-                                 </div>
-                                <div class="modal-body">
-                                    <p>If you delete this group, the data will be permanently lost.</p>
-                                    <p>Would you like to rethink your decision?</p>
-                                </div>
-                                 <div class="modal-footer">
-                                     <a id="standard-grey-button-light" type="button" class="btn btn-default"  href="{% url 'administration:group_delete' pk=group.pk %}">
-
-                                                    <span class="glyphicon glyphicon-remove"></span> Delete
-                                                </a>
-                                    <button id="standard-grey-button-light" type="button" class="btn btn-default"  data-dismiss="modal">Rethink</button>
-                                 </div>
-                            </div>
-
-                            </div>
-                            </div>
 
                             <div class="list-group-item" id="standard-list-group-item-div">
                                 <div class="row">
@@ -224,7 +175,7 @@
                                         <h6>Number of members: {{ group.user_set.all|length }}</h6>
                                     </div>
                                     <div class="col-sm-2">
-                                        <a id="standard-grey-button-light" class="btn btn-default btn-sml" data-toggle="modal" data-target="#groupDelete"  title="Delete Group" style="float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
+                                        <a id="standard-grey-button-light" class="btn btn-default btn-sml" onclick="deletePrompt('{{group.pk}}')" title="Delete Group" style="float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
                                     </div>
                                 </div>
                             </div>
@@ -240,4 +191,37 @@
 </div><!-- end second column -->
 
 </div><!-- end row -->
+
+<div class="modal fade" id="groupDeleteModal" role="dialog">
+	<div class="modal-dialog">
+
+	 <!-- Modal content-->
+	    <div class="modal-content">
+	        <div class="modal-header">
+	            <button type="button" class="close" data-dismiss="modal">&times;</button>
+	            <h4 class="modal-title">Delete This Category</h4>
+	         </div>
+	        <div class="modal-body">
+	            <p>If you delete This Category, the data will be permanently lost.</p>
+	            <p>Would you like to rethink your decision?</p>
+	        </div>
+	         <div class="modal-footer">
+	            <button id="standard-grey-button-light" type="button" class="btn btn-default" data-dismiss="modal">Rethink</button>
+	            <a id="groupButtonDelete" type="button" class="btn btn-default standard-grey-button-light" href="">
+	                <span class="glyphicon glyphicon-remove"></span> Delete
+	            </a>
+	         </div>
+	    </div>
+
+	</div>
+</div>
+<script>
+function deletePrompt(pk){
+		document.getElementById("groupButtonDelete").setAttribute('href',"{% url 'administration:group_delete' pk=0 %}".replace("0", pk))
+		$('#groupDeleteModal').modal('show');
+	}
+
+</script>
+
+
 {% endblock %}
