--- a/administration/templates/administration/information.html
+++ b/administration/templates/administration/information.html
@@ -58,30 +58,6 @@
                     {% for info in infos %}
 
 
-                        <div class="modal fade" id="deleteModal" role="dialog">
-                            <div class="modal-dialog">
-
-                             <!-- Modal content-->
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                        <h4 class="modal-title">Delete This Information</h4>
-                                     </div>
-                                    <div class="modal-body">
-                                        <p>If you delete This information, the data will be permanently lost.</p>
-                                        <p>Would you like to rethink your decision?</p>
-                                    </div>
-                                     <div class="modal-footer">
-                                        <button id="standard-grey-button-light" type="button" class="btn btn-default" data-dismiss="modal">Rethink</button>
-                                        <a id="standard-grey-button-light" type="button" class="btn btn-default" href="{% url 'administration:information_delete' pk=info.pk %}">
-                                            <span class="glyphicon glyphicon-remove"></span> Delete
-                                        </a>
-                                     </div>
-                                </div>
-
-                            </div>
-                        </div>
-
                     <!-- list all information -->
                     <div class="list-group-item" id="standard-list-group-item-div">
                         <div class="row">
@@ -97,7 +73,7 @@
                                 </div>
                             </a>
                             <div class="col-sm-1">
-                                <button type="button" class="btn btn-default btn-sml standard-grey-button-light " style="float: right; margin-top: 10px;" data-toggle="modal" data-target="#deleteModal"><span class="glyphicon glyphicon-remove"></span> Delete</button>
+                                <button type="button" class="btn btn-default btn-sml standard-grey-button-light " style="float: right; margin-top: 10px;" onclick="deletePrompt('info','{{info.pk}}')"><span class="glyphicon glyphicon-remove"></span> Delete</button>
                             </div>
                         </div>
                     </div>
@@ -126,7 +102,7 @@
                                     </div>
                                 </a>
                                 <div class="col-sm-1">
-                                    <button type="button" id="{{ comment.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right; margin-top: 10px;" onclick="location.href='{% url 'administration:comment_delete' pk=comment.pk %}'"><span class="glyphicon glyphicon-remove"></span> Delete</button>
+                                    <button type="button" id="{{ comment.id }}" class="btn btn-default btn-sml standard-grey-button-light " style="float: right; margin-top: 10px;" onclick="deletePrompt('comm','{{comment.pk }}')"><span class="glyphicon glyphicon-remove"></span> Delete</button>
                                 </div>
                             </div>
                         </div>
@@ -136,5 +112,67 @@
         </div>
     </div>
 </div><!-- end information -->
+
+<div class="modal fade" id="infoDeleteModal" role="dialog">
+	<div class="modal-dialog">
+
+	 <!-- Modal content-->
+	    <div class="modal-content">
+	        <div class="modal-header">
+	            <button type="button" class="close" data-dismiss="modal">&times;</button>
+	            <h4 class="modal-title">Delete This Information</h4>
+	         </div>
+	        <div class="modal-body">
+	            <p>If you delete This Information, this data will be permanently lost.</p>
+	            <p>Would you like to rethink your decision?</p>
+	        </div>
+	         <div class="modal-footer">
+	            <button id="standard-grey-button-light" type="button" class="btn btn-default" data-dismiss="modal">Rethink</button>
+	            <a id="infoButtonDelete" type="button" class="btn btn-default standard-grey-button-light" href="">
+	                <span class="glyphicon glyphicon-remove"></span> Delete
+	            </a>
+	         </div>
+	    </div>
+
+	</div>
+</div>
+
+<div class="modal fade" id="commDeleteModal" role="dialog">
+	<div class="modal-dialog">
+
+	 <!-- Modal content-->
+	    <div class="modal-content">
+	        <div class="modal-header">
+	            <button type="button" class="close" data-dismiss="modal">&times;</button>
+	            <h4 class="modal-title">Delete This Comment</h4>
+	         </div>
+	        <div class="modal-body">
+	            <p>If you delete This Comment, the data will be permanently lost.</p>
+	            <p>Would you like to rethink your decision?</p>
+	        </div>
+	         <div class="modal-footer">
+	            <button id="standard-grey-button-light" type="button" class="btn btn-default" data-dismiss="modal">Rethink</button>
+	            <a id="commButtonDelete" type="button" class="btn btn-default standard-grey-button-light" href="">
+	                <span class="glyphicon glyphicon-remove"></span> Delete
+	            </a>
+	         </div>
+	    </div>
+
+	</div>
+</div>
+
+<script>
+function deletePrompt(conf,pk){
+        if (conf=="info"){
+		document.getElementById("infoButtonDelete").setAttribute('href',"{% url 'administration:information_delete' pk=0 %}".replace("0", pk))
+		$('#infoDeleteModal').modal('show');
+		}
+		else{
+		document.getElementById("commButtonDelete").setAttribute('href',"{% url 'administration:comment_delete' pk=0 %}".replace("0", pk))
+		$('#commDeleteModal').modal('show');
+		}
+	}
+
+</script>
 
 {% endblock %}
