--- a/basics/templates/basics/information_view.html
+++ b/basics/templates/basics/information_view.html
@@ -31,31 +31,6 @@
                     <div class="col-sm-10 col-sm-offset-1">
                         {% for comment in comments %}
 
-                        <div class="modal fade" id="commentDelete" role="dialog">
-                        <div class="modal-dialog">
-
-                         <!-- Modal content-->
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Delete This comment</h4>
-                                 </div>
-                                <div class="modal-body">
-                                    <p>If you delete this comment, the data will be permanently lost.</p>
-                                    <p>Would you like to rethink your decision?</p>
-                                </div>
-                                 <div class="modal-footer">
-                                     <a id="standard-grey-button-light" type="button" class="btn btn-default"  href="{% url 'basics:information_delete_comment' pk_inf=information.pk pk_comm=comment.pk %}">
-
-                                                    <span class="glyphicon glyphicon-remove"></span> Delete
-                                                </a>
-                                    <button id="standard-grey-button-light" type="button" class="btn btn-default"  data-dismiss="modal">Rethink</button>
-                                 </div>
-                            </div>
-
-                        </div>
-                        </div>
-
                             <!-- list all information -->
                             <div class="row">
                                 <div class="col-sm-12">
@@ -83,7 +58,7 @@
                                                 <div class="col-sm-9" id="comment-meta-data">
                                                     <p><i>from {{ comment.date }}{% if comment.group %} by <a id="green-link" href="{% url 'basics:group_detail_for_user' name=comment.group.name %}">{{ comment.group.name }}</a>{% elif comment.author == user %} by <span>you</span>{% endif %}</i></p>
                                                 </div>
-                                                <a class="list-group-footer-button" type="button" data-toggle="modal" data-target="#commentDelete" >
+                                                <a class="list-group-footer-button" type="button" onclick="deletePrompt('{{information.pk}}','{{comment.pk}}')" >
                                                     <div class="col-sm-3">
                                                         <span class="glyphicon glyphicon-remove"></span> Delete
                                                     </div>
@@ -156,6 +131,40 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="CommentDeleteModal" role="dialog">
+	<div class="modal-dialog">
+
+	 <!-- Modal content-->
+	    <div class="modal-content">
+	        <div class="modal-header">
+	            <button type="button" class="close" data-dismiss="modal">&times;</button>
+	            <h4 class="modal-title">Delete This Comment</h4>
+	         </div>
+	        <div class="modal-body">
+	            <p>If you delete This Comment, the data will be permanently lost.</p>
+	            <p>Would you like to rethink your decision?</p>
+	        </div>
+	         <div class="modal-footer">
+	            <button id="standard-grey-button-light" type="button" class="btn btn-default" data-dismiss="modal">Rethink</button>
+	            <a id="CommentButtonDelete" type="button" class="btn btn-default standard-grey-button-light" href="">
+	                <span class="glyphicon glyphicon-remove"></span> Delete
+	            </a>
+	         </div>
+	    </div>
+
+	</div>
+</div>
+
+<script>
+
+function deletePrompt(pkInf, pkComm){
+		document.getElementById("CommentButtonDelete").setAttribute('href',"{% url 'basics:information_delete_comment' pk_inf=0 pk_comm=1 %}".replace("0", pkInf).replace("1",pkComm))
+		$('#CommentDeleteModal').modal('show');
+
+	}
+
+</script>
 
 <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAmqqg6nhFweM6hPaowtRZT0kRsHPZSaBA"></script>
 <script>
